Might be working.

--- a/hello-world.html
+++ b/hello-world.html
@@ -7,6 +7,29 @@
  <body>
      <script type="text/javascript">VSS.init();</script>
      <h1>Hello World</h1>
+    <label>
+        Username
+        <input type="text" placeholder="e.g. lfuller941" />
+        
+    </label>
+    <br>
+    <label>
+        Password
+        <input type="password" placeholder="Your Anypoint Platform password" />
+    </label>
+    <br>
+    <label>
+        Domain
+        <input type="text" placeholder="e.g. hello" />
+    </label>
+    <br>
+    <label>
+        Full Domain
+        <input type="text" placeholder="e.g. hello.cloudhub.io" />
+    </label>
+
+
+
      <script type="text/javascript">VSS.notifyLoadSucceeded();</script>
  </body>
  </html>
